--- a/src/client/resources/assets/shit/lang/en_us.json
+++ b/src/client/resources/assets/shit/lang/en_us.json
@@ -1,4 +1,5 @@
 {
+  "item.gun.mag.fullness": "Bullets: %s/%s",
   "death.attack.energized_by_peep_low_health": "%1$s didnt't have enough strength to house the surge",
   "death.attack.energized_by_peep_bomb": "%1$s couldn't house the after surge",
   "death.attack.energized_by_peep": "%1$s couldn't house the surge",
