--- a/src/client/resources/assets/minecraft/lang/en_us.json
+++ b/src/client/resources/assets/minecraft/lang/en_us.json
@@ -45,7 +45,7 @@
   "advancements.adventure.root.title": "Adventure",
   "advancements.adventure.salvage_sherd.description": "Brush a Suspicious block to obtain a Pottery Sherd",
   "advancements.adventure.salvage_sherd.title": "Respecting the Remnants",
-  "advancements.adventure.shoot_arrow.description": "Shoot something with an Bullet",
+  "advancements.adventure.shoot_arrow.description": "Shoot something with an Arrow",
   "advancements.adventure.shoot_arrow.title": "Take A Shot",
   "advancements.adventure.sleep_in_bed.description": "Sleep in a Bed to change your respawn point",
   "advancements.adventure.sleep_in_bed.title": "Sweet Dreams",
@@ -71,8 +71,8 @@
   "advancements.adventure.trim_with_all_exclusive_armor_patterns.title": "Smithing with Style",
   "advancements.adventure.trim_with_any_armor_pattern.description": "Craft a trimmed armor at a Smithing Table",
   "advancements.adventure.trim_with_any_armor_pattern.title": "Crafting a New Look",
-  "advancements.adventure.two_birds_one_arrow.description": "Kill two Phantoms with a piercing Bullet",
-  "advancements.adventure.two_birds_one_arrow.title": "Two Birds, One Bullet",
+  "advancements.adventure.two_birds_one_arrow.description": "Kill two Phantoms with a piercing Arrow",
+  "advancements.adventure.two_birds_one_arrow.title": "Two Birds, One Arrow",
   "advancements.adventure.very_very_frightening.description": "Strike a Villager with lightning",
   "advancements.adventure.very_very_frightening.title": "Very Very Frightening",
   "advancements.adventure.voluntary_exile.description": "Kill a raid captain.\nMaybe consider staying away from villages for the time being...",
@@ -3067,7 +3067,7 @@
   "entity.minecraft.allay": "Allay",
   "entity.minecraft.area_effect_cloud": "Area Effect Cloud",
   "entity.minecraft.armor_stand": "Armor Stand",
-  "entity.minecraft.arrow": "Bullet",
+  "entity.minecraft.arrow": "Arrow",
   "entity.minecraft.axolotl": "Axolotl",
   "entity.minecraft.bat": "Bat",
   "entity.minecraft.bee": "Bee",
@@ -3152,7 +3152,7 @@
   "entity.minecraft.salmon": "Salmon",
   "entity.minecraft.sheep": "Sheep",
   "entity.minecraft.shulker": "Shulker",
-  "entity.minecraft.shulker_bullet": "Shulker Bullet",
+  "entity.minecraft.shulker_Arrow": "Shulker Arrow",
   "entity.minecraft.silverfish": "Silverfish",
   "entity.minecraft.skeleton": "Skeleton",
   "entity.minecraft.skeleton_horse": "Skeleton Horse",
@@ -3162,7 +3162,7 @@
   "entity.minecraft.snow_golem": "Snow Golem",
   "entity.minecraft.snowball": "Snowball",
   "entity.minecraft.spawner_minecart": "Minecart with Monster Spawner",
-  "entity.minecraft.spectral_arrow": "Spectral Bullet",
+  "entity.minecraft.spectral_arrow": "Spectral Arrow",
   "entity.minecraft.spider": "Spider",
   "entity.minecraft.squid": "Squid",
   "entity.minecraft.stray": "Stray",
@@ -3533,7 +3533,7 @@
   "item.minecraft.armor_stand": "Armor Stand",
   "item.minecraft.arms_up_pottery_shard": "Arms Up Pottery Shard",
   "item.minecraft.arms_up_pottery_sherd": "Arms Up Pottery Sherd",
-  "item.minecraft.arrow": "Bullet",
+  "item.minecraft.arrow": "Arrow",
   "item.minecraft.axolotl_bucket": "Bucket of Axolotl",
   "item.minecraft.axolotl_spawn_egg": "Axolotl Spawn Egg",
   "item.minecraft.baked_potato": "Baked Potato",
@@ -4002,7 +4002,7 @@
   "item.minecraft.snort_pottery_sherd": "Snort Pottery Sherd",
   "item.minecraft.snow_golem_spawn_egg": "Snow Golem Spawn Egg",
   "item.minecraft.snowball": "Snowball",
-  "item.minecraft.spectral_arrow": "Spectral Bullet",
+  "item.minecraft.spectral_arrow": "Spectral Arrow",
   "item.minecraft.spider_eye": "Spider Eye",
   "item.minecraft.spider_spawn_egg": "Spider Spawn Egg",
   "item.minecraft.splash_potion": "Splash Potion",
@@ -4046,29 +4046,29 @@
   "item.minecraft.sweet_berries": "Sweet Berries",
   "item.minecraft.tadpole_bucket": "Bucket of Tadpole",
   "item.minecraft.tadpole_spawn_egg": "Tadpole Spawn Egg",
-  "item.minecraft.tipped_arrow": "Tipped Bullet",
-  "item.minecraft.tipped_arrow.effect.awkward": "Tipped Bullet",
-  "item.minecraft.tipped_arrow.effect.empty": "Uncraftable Tipped Bullet",
-  "item.minecraft.tipped_arrow.effect.fire_resistance": "Bullet of Fire Resistance",
-  "item.minecraft.tipped_arrow.effect.harming": "Bullet of Harming",
-  "item.minecraft.tipped_arrow.effect.healing": "Bullet of Healing",
-  "item.minecraft.tipped_arrow.effect.invisibility": "Bullet of Invisibility",
-  "item.minecraft.tipped_arrow.effect.leaping": "Bullet of Leaping",
-  "item.minecraft.tipped_arrow.effect.levitation": "Bullet of Levitation",
-  "item.minecraft.tipped_arrow.effect.luck": "Bullet of Luck",
-  "item.minecraft.tipped_arrow.effect.mundane": "Tipped Bullet",
-  "item.minecraft.tipped_arrow.effect.night_vision": "Bullet of Night Vision",
-  "item.minecraft.tipped_arrow.effect.poison": "Bullet of Poison",
-  "item.minecraft.tipped_arrow.effect.regeneration": "Bullet of Regeneration",
-  "item.minecraft.tipped_arrow.effect.slow_falling": "Bullet of Slow Falling",
-  "item.minecraft.tipped_arrow.effect.slowness": "Bullet of Slowness",
-  "item.minecraft.tipped_arrow.effect.strength": "Bullet of Strength",
-  "item.minecraft.tipped_arrow.effect.swiftness": "Bullet of Swiftness",
-  "item.minecraft.tipped_arrow.effect.thick": "Tipped Bullet",
-  "item.minecraft.tipped_arrow.effect.turtle_master": "Bullet of the Turtle Master",
-  "item.minecraft.tipped_arrow.effect.water": "Bullet of Splashing",
-  "item.minecraft.tipped_arrow.effect.water_breathing": "Bullet of Water Breathing",
-  "item.minecraft.tipped_arrow.effect.weakness": "Bullet of Weakness",
+  "item.minecraft.tipped_arrow": "Tipped Arrow",
+  "item.minecraft.tipped_arrow.effect.awkward": "Tipped Arrow",
+  "item.minecraft.tipped_arrow.effect.empty": "Uncraftable Tipped Arrow",
+  "item.minecraft.tipped_arrow.effect.fire_resistance": "Arrow of Fire Resistance",
+  "item.minecraft.tipped_arrow.effect.harming": "Arrow of Harming",
+  "item.minecraft.tipped_arrow.effect.healing": "Arrow of Healing",
+  "item.minecraft.tipped_arrow.effect.invisibility": "Arrow of Invisibility",
+  "item.minecraft.tipped_arrow.effect.leaping": "Arrow of Leaping",
+  "item.minecraft.tipped_arrow.effect.levitation": "Arrow of Levitation",
+  "item.minecraft.tipped_arrow.effect.luck": "Arrow of Luck",
+  "item.minecraft.tipped_arrow.effect.mundane": "Tipped Arrow",
+  "item.minecraft.tipped_arrow.effect.night_vision": "Arrow of Night Vision",
+  "item.minecraft.tipped_arrow.effect.poison": "Arrow of Poison",
+  "item.minecraft.tipped_arrow.effect.regeneration": "Arrow of Regeneration",
+  "item.minecraft.tipped_arrow.effect.slow_falling": "Arrow of Slow Falling",
+  "item.minecraft.tipped_arrow.effect.slowness": "Arrow of Slowness",
+  "item.minecraft.tipped_arrow.effect.strength": "Arrow of Strength",
+  "item.minecraft.tipped_arrow.effect.swiftness": "Arrow of Swiftness",
+  "item.minecraft.tipped_arrow.effect.thick": "Tipped Arrow",
+  "item.minecraft.tipped_arrow.effect.turtle_master": "Arrow of the Turtle Master",
+  "item.minecraft.tipped_arrow.effect.water": "Arrow of Splashing",
+  "item.minecraft.tipped_arrow.effect.water_breathing": "Arrow of Water Breathing",
+  "item.minecraft.tipped_arrow.effect.weakness": "Arrow of Weakness",
   "item.minecraft.tnt_minecart": "Minecart with TNT",
   "item.minecraft.torchflower_seeds": "Torchflower Seeds",
   "item.minecraft.totem_of_undying": "Totem of Undying",
@@ -5473,7 +5473,7 @@
   "subtitles.entity.allay.item_taken": "Allay allays",
   "subtitles.entity.allay.item_thrown": "Allay tosses",
   "subtitles.entity.armor_stand.fall": "Something fell",
-  "subtitles.entity.arrow.hit": "Bullet hits",
+  "subtitles.entity.arrow.hit": "Arrow hits",
   "subtitles.entity.arrow.hit_player": "Player hit",
   "subtitles.entity.arrow.shoot": "Shots fired",
   "subtitles.entity.axolotl.attack": "Axolotl attacks",
@@ -5848,8 +5848,8 @@
   "subtitles.entity.sheep.ambient": "Sheep baahs",
   "subtitles.entity.sheep.death": "Sheep dies",
   "subtitles.entity.sheep.hurt": "Sheep hurts",
-  "subtitles.entity.shulker_bullet.hit": "Shulker Bullet explodes",
-  "subtitles.entity.shulker_bullet.hurt": "Shulker Bullet breaks",
+  "subtitles.entity.shulker_Arrow.hit": "Shulker Arrow explodes",
+  "subtitles.entity.shulker_Arrow.hurt": "Shulker Arrow breaks",
   "subtitles.entity.shulker.ambient": "Shulker lurks",
   "subtitles.entity.shulker.close": "Shulker closes",
   "subtitles.entity.shulker.death": "Shulker dies",
@@ -6063,7 +6063,7 @@
   "subtitles.item.chorus_fruit.teleport": "Player teleports",
   "subtitles.item.crop.plant": "Crop planted",
   "subtitles.item.crossbow.charge": "Crossbow charges up",
-  "subtitles.item.crossbow.hit": "Bullet hits",
+  "subtitles.item.crossbow.hit": "Arrow hits",
   "subtitles.item.crossbow.load": "Crossbow loads",
   "subtitles.item.crossbow.shoot": "Crossbow fires",
   "subtitles.item.dye.use": "Dye stains",
