fixed the can to air in BottleItem.java fixed the crafting recipe for the dimented_bow.json Sculk Mew > Sculk Maw (en_us.json) 0.70.13 > 0.70.14 (gradle.properties) commented out the /explode command in Main.java prevented the warden from taking damage from the SculkTeethBlock.java

--- a/src/main/resources/assets/tdbtd/lang/en_us.json
+++ b/src/main/resources/assets/tdbtd/lang/en_us.json
@@ -148,7 +148,7 @@
   "block.tdbtd.sculk_thorns": "Sculk Thorns",
   "block.tdbtd.sculk_emitter": "Sculk Emitter",
   "block.tdbtd.sculk_shaker": "Sculk Shaker",
-  "block.tdbtd.sculk_maw": "Sculk Mew",
+  "block.tdbtd.sculk_maw": "Sculk Maw",
   "block.tdbtd.sculk_weed": "Sculk Weed",
   "block.tdbtd.criteric_moss_block": "Criteric Moss Block",
   "block.tdbtd.criteric_moss_carpet": "Criteric Moss Carpet",
