fixed the can to air in BottleItem.java fixed the crafting recipe for the dimented_bow.json Sculk Mew > Sculk Maw (en_us.json) 0.70.13 > 0.70.14 (gradle.properties) commented out the /explode command in Main.java prevented the warden from taking damage from the SculkTeethBlock.java fixed the recipe for the dimented_flower.json

--- a/src/main/resources/assets/tdbtd/lang/en_us.json
+++ b/src/main/resources/assets/tdbtd/lang/en_us.json
@@ -229,5 +229,6 @@
   "block.tdbtd.infurtrinated_diorite_wall": "Infurtrinated Diorite Wall",
   "block.tdbtd.infurtrinated_andesite_stairs": "Infurtrinated Andesite Stairs",
   "block.tdbtd.infurtrinated_andesite_slab": "Infurtrinated Andesite Slab",
-  "block.tdbtd.infurtrinated_andesite_wall": "Infurtrinated Andesite Wall"
+  "block.tdbtd.infurtrinated_andesite_wall": "Infurtrinated Andesite Wall",
+  "block.tdbtd.criteric_charred_roots": "Criteric Charred Roots"
 }
